# dir2prompt

./: .gitignore  Cargo.toml  LICENSE  README.md  config.json  dir2prompt_prompt.txt  pyproject.toml  setup.py
d2p/: d2p.py
dir2prompt/: config.json  d2p.py
src/: __init__.py  config.json  d2p.py  lib.rs
