[package]
name = "dir2prompt"
version = "2.0.4"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
anyhow = "1.0.98"
clap = { version = "4.5.41", features = ["derive"] }
once_cell = "1.21.3"
pyo3 = { version = "0.22.2", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
yash-fnmatch = "1.1.2"
