[project]
name = "dir2prompt"
version = "1.0.0"
authors = [
    { name="Max Kieffer", email="wkieffer@ufl.edu" },
]
description = "A tool to generate prompts for long-context LLMs from directory contents"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "prompt engineering",
    "large language model",
    "directory structure",
    "prompt generation",
    "file tree visualization",
    "directory to prompt",
    "automation tools",
    "developer utilities",
    "code documentation",
]

[project.urls]
Homepage = "https://github.com/mkieffer1107/dir2prompt"
Issues = "https://github.com/mkieffer1107/dir2prompt/issues"