[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "dir2prompt"
version = "1.0.3"
license = {file = "LICENSE"}
authors = [
  { name="Max Kieffer", email="wkieffer@ufl.edu" },
]
description = "Generate prompts for long-context LLMs using the content in your directory"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.6",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
]
keywords = [
    "prompt engineering",
    "large language model",
    "directory structure",
    "prompt generation",
    "file tree visualization",
    "directory to prompt",
    "automation tools",
    "developer utilities",
    "code documentation",
]

[project.urls]
Homepage = "https://github.com/mkieffer1107/dir2prompt"
Issues = "https://github.com/mkieffer1107/dir2prompt/issues"

[tool.setuptools]
packages = ["src"]
package-data = {"src" = ["config.json"]}

[project.scripts]
d2p = "src.d2p:main"