[project]
name = "dir2prompt"
version = "2.0.4"
license = {file = "LICENSE"}
authors = [
  { name="Max Kieffer", email="wkieffer@ufl.edu" },
]
description = "Generate prompts for long-context LLMs using the content in your directory"
readme = "README.md"
requires-python = ">=3.6"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
]
keywords = [
    "prompt engineering",
    "large language model",
    "directory structure",
    "prompt generation",
    "file tree visualization",
    "directory to prompt",
    "automation tools",
    "developer utilities",
    "code documentation",
]

[project.urls]
Homepage = "https://github.com/mkieffer1107/dir2prompt"
Issues = "https://github.com/mkieffer1107/dir2prompt/issues"

[project.scripts]
d2p = "dir2prompt:cli"

[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"